2000-01-25 02:45 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/debug/debugger.prg
     * Support for up and down arrows on command window
       Still needs some fine tunning.

2000-01-24 20:15 GMT-5 David G. Holm <dholm@ sd-llc.com>

   * source/rtl/environ.c
     % Due to careless use of the CVS repository, I had to redo the following:
     ! Fixed bug in setting end of string for case VER_PLATFORM_WIN32_WINDOWS:
     ! Put Windows support for MingW32 back in after accidentally removing it.

20000123-17:35 GMT+1 Ignacio Ortiz <ignacio@fivetech.com>
   * source/rtl/tget.prg
     * Improved: cursor flickering removed

2000-01-23 16:30 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/debug/debugger.prg
     * Improved debugger.

   * source/rtl/tgetlist.prg
     * Improved METHOD ShowScoreBoard.

   * source/vm/hvm.c
     + New public BOOL variable hb_DebuggerIsWorking

20000124-14:05 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/rtl/memoline.c
	* fixed 'max' to 'HB_MAX_'

    *source/rtl/mlpos.c
	* added RCS ID

    *source/rtl/Makefile
	* added mlpos.c file

20000124-13:30 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.y
    *source/macro/macro.c
	* fixed support for the syntax:
	    DO &var
	    DO &( expression_list )

2000-01-23 22:03 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/debug/debugger.prg
     * Improved debugger View Sets painting.

2000-01-23 10:53 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/rtl/tbrowse.prg
     * The newly retrieved data is passed as an argument to ColorBlock
       (accordingly to Clipper ColorBlock documentation)

   * source/debug/debugger.prg
     * Improved debugger: View Sets is partially working.

2000-01-22 20:03 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/debug/debugger.prg
     * Improved debugger: Command window is starting working.

2000-01-22 13:40 GMT+3 Luiz Rafael Culik <culik@sl.conex.net>
   * ngdoc/ft_helpc.prg